compiler/typ/tests/fixtures/diagnostics/0311_fun_monomorphic_int_bool_use_08.ml.infer.expected
File "0311_fun_monomorphic_int_bool_use_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0311_fun_monomorphic_int_bool_use_08 is not a valid module name.

File "0311_fun_monomorphic_int_bool_use_08.ml", line 1, characters 26-30:
1 | let use_theta f = (f 7, f true)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
